# ru-remote-work-compliance-kit

./: .editorconfig  .gitignore  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
ai/: pyproject.toml
ai/src/remote_work_ai_helper/: ai_provider.py  models.py  policy_generator.py  profile_loader.py  risk_engine.py
cli/: main.py
cli/commands/: assess_endpoint.py
examples/org-profiles/: fintech-remote-first.yaml  smb-it-outsourcing.yaml
policies/templates/: byod-policy.ru.md  endpoint-hardening-checklist.ru.md  incident-reporting-procedure.ru.md  pdl-home-handling-policy.ru.md  remote-work-policy.ru.md  vpn-usage-rules.ru.md
scripts-dev/: dev_run_all_tests.sh  lint.sh  perf_check.sh  security_scan.sh
scripts/endpoints/: check_linux.sh  check_macos.sh  check_windows.ps1
scripts/reporting/: generate_endpoint_report.py
tests/integration/: test_endpoint_check_linux.py  test_endpoint_check_macos.py  test_endpoint_check_windows.ps1
tests/unit/: test_ai_provider_noop.py  test_cli_assess_endpoint.py  test_cli_generate_policy.py  test_policy_generator.py  test_profile_loader.py  test_risk_engine.py
vpn-configs/openvpn/: README.ru.md  ovpn-forced-tunnel.conf.example  ovpn-split-tunnel.conf.example
vpn-configs/wireguard/: README.ru.md  wg-forced-tunnel.conf.example  wg-split-tunnel.conf.example
