[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-work-ai-helper"
version = "0.1.0"
description = "AI helper for generating remote work policies"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "jinja2"
]

[tool.setuptools.packages.find]
where = ["src"]
